# ComponentizeJS

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Cargo.toml  EXAMPLE.md  Makefile  README.md  cliff.toml  console.js  package-lock.json  package.json  rust-toolchain.toml  types.d.ts  update-spidermonkey.sh  update-wasi.sh  wasi-version
.github/workflows/: create-release-pr.yml  main.yml  release.yml  tag-release.yml
crates/spidermonkey-embedding-splicer/: Cargo.toml  spidermonkey-embedding-splicer.wit
crates/spidermonkey-embedding-splicer/src/: bindgen.rs  lib.rs  splice.rs  stub_wasi.rs  wit.rs
crates/spidermonkey-embedding-splicer/wit/: spidermonkey-embedding-splicer.wit
crates/splicer-component/: Cargo.toml
crates/splicer-component/src/: lib.rs
embedding/: embedding.cpp  embedding.h
example/: Cargo.toml  README.md  build.mjs  componentize.js  hello.js  hello.wit  package-lock.json  package.json  run.sh  test.sh
example/src/: main.rs
example/wit/: test1.wit
examples/: README.md
examples/hello-world/: README.md  test.sh
examples/hello-world/guest/: componentize.js  hello.js  hello.wit  package.json
examples/hello-world/host/: Cargo.toml
examples/hello-world/host/src/: main.rs
lib/: componentize.js  spidermonkey-embedding-splicer.d.ts  spidermonkey-embedding-splicer.js  wasi_snapshot_preview1.wasm
lib/exports/: exports.d.ts
scripts/: prepack.mjs
spidermonkey_embedding/: error-numbers.msg  spidermonkey_embedding.cpp  spidermonkey_embedding.h
spidermonkey_embedding/builtins/: builtins.cpp  builtins.h  console.cpp  console.h  text_decoder.cpp  text_decoder.h  text_encoder.cpp  text_encoder.h
src/: cli.js  componentize.js  oci-annotations.js  platform.js  splicer.js
test/: api.js  bindings.js  builtins.js  oci-annotations.test.js  splicer.js  test.js  util.js  vitest.ts  wasi.js
test/api/: index.js
test/builtins/: console-object.js  console-simple.js  crypto-random-disabled.js  crypto-random.js  error-async.js  error-sync.js  fetch.js  globals.js  math-random-disabled.js  math-random.js  now-disabled.js  now.js  performance-disabled.js  performance.js  pure.js  timeout-disabled.js  timeout.js
test/cases/arg/: test.js  world.wit
test/cases/args/: source.js  world.wit
test/cases/bad-binding/: source.js  test.js  world.wit
test/cases/char/: chars.js  source.d.ts  source.js  test.js  world.wit
test/cases/conventions/: imports.js  source.js  test.js  world.wit
test/cases/empty/: source.js  test.js  world.wit
test/cases/fetch-event-server/: test.js
test/cases/flags/: flags.js  source.js  test.js  world.wit
test/cases/flavorful/: imports.js  source.js  test.js  world.wit
test/cases/floats/: floats.js  imports.js  source.js  test.js  world.wit
test/cases/hello/: get-num.js  source.js  test.js  world.wit
test/cases/http-request/: source.js  test.js
test/cases/http-server/: source.js  test.js
test/cases/import-duplicated-interface/: local-hello-hello.js  local-hello-second-hello.js  local:http-request-part-two-http.js  source.js  test.js
test/cases/import-duplicated-interface/wit/: world.wit
test/cases/import-func/: foo.js  foo1.js  foo2.js  foo3.js  foo4.js  source.js  test.js  world.wit
test/cases/integers/: integers.js  source.js  test.js  world.wit
test/cases/kebab-fn-impt/: print.js  source.js  test.js  world.wit
test/cases/keywords/: keywords.js  source.js  test.js  world.wit
test/cases/lists/: lists.js  source.js  test.js  world.wit
test/cases/many-arguments/: manyarg.js  source.js  test.js  world.wit
test/cases/missing-export/: source.js  test.js  world.wit
test/cases/multi-return/: multi-return.js  source.js  test.js  world.wit
test/cases/records/: records.js  source.js  test.js  world.wit
test/cases/rename-interface/: other-name.js  source.js  test.js  world.wit
test/cases/repeated-calls/: source.js  test.js  world.wit
test/cases/resource-aggregates/: resource-aggregates.js  source.js  test.js  world.wit
test/cases/resource-alias/: source.js  test.js  unions.js  world.wit
test/cases/resource-alias-redux/: resource-alias1.js  resource-alias2.js  source.js  test.js  world.wit
test/cases/resource-borrow-export/: source.js  test.js  world.wit
test/cases/resource-borrow-import/: resource-borrow-import.js  source.js  test.js  world.wit
test/cases/resource-borrow-in-record/: resource-borrow-in-record.js  source.js  test.js  world.wit
test/cases/resource-floats/: resource-floats-imports.js  resource-floats.js  source.js  test.js  world.wit
test/cases/resource-import-and-export/: resource-import-and-export.js  source.js  test.js  world.wit
test/cases/resource-top-level/: source.js  test.js  thing.js  world.wit
test/cases/resource-with-lists/: resource-with-lists.js  source.js  test.js  world.wit
test/cases/resources/: imports.js  source.js  test.js  world.wit
test/cases/simple-functions/: imports.js  source.js  test.js  world.wit
test/cases/simple-lists/: imports.js  simple-lists.js  source.js  test.js  world.wit
test/cases/small-anonymous/: anon.js  source.js  test.js  world.wit
test/cases/smoke/: imports.js  source.js  test.js  world.wit
test/cases/smoke-default/: source.js  test.js  world.wit
test/cases/smoke-export/: source.js  test.js  world.wit
test/cases/strings/: source.js  strings.js  test.js  world.wit
test/cases/treeshake/: imports.js  source.js  test.js  world.wit
test/cases/type-imports/: source.js  test.js
test/cases/type-imports/wit/: world.wit
test/cases/unions/: source.js  test.js  world.wit
test/cases/use-across-interfaces/: baz.js  source.js  world.wit
test/cases/variants/: imports.js  source.js  test.js  variants.js  world.wit
test/cases/versions/: source.js  test.js
test/cases/wall-clock/: source.js  test.js  wall-clock-t.js  world.wit
test/fixtures/: get-num.js  hello.wit
test/wasi/: filesystem.js  io.js  monotonic-clock.js  stderr.js  wall-clock.js
test/wit/: test1.wit
wasi/: clocks.js  default-clocks.js  exit.js  filesystem.js  logging.js  poll.js  random.js  std-err.js
(+1 files in other folders)
