[workspace]
members = [ "crates/splicer-component","crates/spidermonkey-embedding-splicer"]
exclude = ["StarlingMonkey/crates/rust-url"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0.95", default-features = false }
heck = { version = "0.5", default-features = false }
js-component-bindgen = { version = "1.11.0" }
orca-wasm = { version = "0.9.2", default-features = false }
rand = { version = "0.8", default-features = false }
wasm-encoder = { version = "0.227.1", features = [ "component-model", "std" ] }
wasmparser = { version = "0.227.1", features = ["features",
    "component-model",
    "hash-collections",
    "serde",
    "simd" ,
    "std",
    "validate",
] }
wit-bindgen = { version = "0.41.0", features = [ "macros", "async", "realloc" ] }
wit-bindgen-core = { version = "0.41.0", default-features = false }
wit-component = { version = "0.227.1", features = ["dummy-module"] }
wit-parser = { version = "0.227.1", features = [ "decoding", "serde"] }
