[package]
name = "wasmtime-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes"] }
cap-std = "3.0.0"
wasmtime = { version = "18.0.3", features = ["component-model"] }
wasmtime-wasi =  "18.0.3"
wasmtime-wasi-http =  "18.0.3"
