[package]
name = "wasmtime-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
anyhow = "1.0.81"
async-std = { version = "1.12.0", features = ["attributes"] }
cap-std = "3.0.0"
wasmtime = { version = "19.0.0", features = ["component-model"] }
wasmtime-wasi =  "19.0.0"
wasmtime-wasi-http =  "19.0.0"
