[package]
name = "spidermonkey-embedding-splicer"
authors = ["Guy Bedford"]
publish = false

version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
js-component-bindgen = { workspace = true }
walrus = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
wit-bindgen = { workspace = true }
