[package]
name = "spidermonkey-embedding-splicer"
authors = ["Guy Bedford"]
publish = false

version.workspace = true
edition.workspace = true

[lib]

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
js-component-bindgen = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen = { workspace = true }
orca-wasm.workspace = true
clap = { version = "4.5.31", features = ["suggestions", "color", "derive"] }
