[package]
name = "spidermonkey-embedding-splicer"
authors = ["Guy Bedford"]
publish = false

version.workspace = true
edition.workspace = true

[lib]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.31", features = ["suggestions", "color", "derive"] }
heck = { workspace = true }
js-component-bindgen = { workspace = true, features = [ "transpile-bindgen" ] }
#orca-wasm = { workspace = true }
wirm = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
wasm-encoder = { workspace = true }
wasmparser = { workspace = true }
wit-bindgen = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
