[package]
name = "splicer-component"
description = "WebAssembly Component embedding of the splicer"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
spidermonkey-embedding-splicer = { path = "../spidermonkey-embedding-splicer" }
